@@ -116,6 +116,11 @@ a bad choice, because many servers do not scale well. \\
 
 \hline
 
+\texttt{fastcgi\_stock\_limit} & The maximum number of child processes
+for one FastCGI application.  0 means unlimited. \\
+
+\hline
+
 \texttt{http\_cache\_size} & The maxmimum amount of memory used by the
 HTTP cache.  Set to 0 to disable the HTTP cache. \\
 
