@@ -5,6 +5,7 @@ cm4all-beng-proxy (0.7.23) unstable; urgency=low
   * fcgi-client: recover correctly after send error
   * http-cache: duplicate headers
   * {http,memcached}-client: check "direct" mode after buffer flush
+  * cmdline: added option "fcgi_stock_limit"
   * python: auto-export function write_packet()
 
  --
